# pysect

./: .gitignore  LICENSE  README.md  builder.py  launch.py  main.py  pyproject.toml  standalone.py
docs/: index.html  main.html
docs/config/: config.html  index.html
docs/filament/: filament.html  index.html
docs/primitives/: coord.html  index.html
docs/printer/: index.html  printer.html
docs/sect/: config.html  index.html  sect.html  slice.html
docs/sect/primitives/: index.html  mesh.html  stl.html
docs/sect/serial/: index.html  stl.html
docs/slice/: index.html  slice.html
src/pysect/: __init__.py  main.py
src/pysect/config/: config.py
src/pysect/filament/: filament.py
src/pysect/primitives/: coord.py
src/pysect/printer/: printer.py
src/pysect/sect/: config.py  slice.py
src/pysect/sect/primitives/: mesh.py  stl.py
src/pysect/sect/serial/: stl.py
src/pysect/slice/: slice.py
website/: header.py  init.py  main_page.py  style.py
website/fonts/: README.md
website/pages/: __init__.py
website/pages/platter/: platter.py
website/pages/slice/: slice.py
website/static/: header.html  style.css
